--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
 	<!-- Favicons
 	================================================== -->
+	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
@@ -38,9 +39,9 @@
 
 	<div class="container">
 		<div class="sixteen columns">
-			<h1 class="bold blue spacing1">YIEN + MARC</h1>
+			<h1 class="bold spacing1"><a href="_blank" target="_blank" class="blue">YIEN + MARC</a></h1>
 			<h3 class="light">ARE GETTING MARRIED</h3>
-			<h2 class="bold pink spacing1">30.10.15</h2>
+			<h2 class="bold spacing1"><a href="_blank" target="_blank" class="pink">30.10.15</a></h2>
 			<h3 class="light">IN THE GOOD LOOKING CITY OF</h3>
 			<h2 class="bold spacing1"><a href="https://goo.gl/maps/3kKe6" target="_blank" class="blue">SYDNEY</a></h2>
 			<h3 class="light">COME BACK SOON FOR MORE INFORMATION...</h3>
