Removed false links

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
 	<div class="container">
 		<div class="sixteen columns">
-			<h1 class="bold spacing1"><a href="_blank" target="_blank" class="blue">YIEN + MARC</a></h1>
+			<h1 class="bold spacing1 blue">YIEN + MARC</h1>
 			<h3 class="light">ARE GETTING MARRIED</h3>
-			<h2 class="bold spacing1"><a href="_blank" target="_blank" class="pink">30.10.15</a></h2>
+			<h2 class="bold spacing1 pink">30.10.15</h2>
 			<h3 class="light">IN THE GOOD LOOKING CITY OF</h3>
 			<h2 class="bold spacing1"><a href="https://goo.gl/maps/3kKe6" target="_blank" class="blue">SYDNEY</a></h2>
 			<h3 class="light">COME BACK SOON FOR MORE INFORMATION...</h3>
