--- a/index.html
+++ b/index.html
@@ -38,14 +38,34 @@
 <body>
 
 	<div class="container">
-		<div class="sixteen columns">
-			<h1 class="bold spacing1 blue">YIEN + MARC</h1>
-			<h3 class="light">ARE GETTING MARRIED</h3>
-			<h2 class="bold spacing1 pink">30.10.15</h2>
-			<h3 class="light">IN THE GOOD LOOKING CITY OF</h3>
-			<h2 class="bold spacing1"><a href="https://goo.gl/maps/3kKe6" target="_blank" class="blue">SYDNEY</a></h2>
-			<h3 class="light">COME BACK SOON FOR MORE INFORMATION...</h3>
-			<h3 class="bold spacing3"><a href="mailto:wedding@yienandmarc.net" target="_blank" class="pink">email us</a></h3>
+		<div class="row header spacing1 border-bottom">
+			<div class="sixteen columns">
+			<h2 class="bold blue"><a href="http://yienandmarc.net/" class="blue">YIEN + MARC ARE GETTING MARRIED!</a></h2>
+			</div>
+		</div>
+		<div class="row navigation-top border-bottom">
+			<div class="eight columns"><h4 class="bold"><a href="http://yienandmarc.net" class="pink">THE WEDDING</a></h4></div>
+			<div class="eight columns"><h4 class="bold"><a href="http://yienandmarc.net/accomodation" class="pink">TRAVELLER INFORMATION</a></h4></div>
+		</div>
+		<div class="row">
+			<div class="four columns navigation-left spacing1">
+				<h4 class="bold pink align-left">WEDDING SCHEDULE</h4>
+			</div>
+			<div class="twelve columns spacing1">
+				<div class="content">
+					<h3 class="bold blue align-left border-bottom">THE CEREMONY</h3>
+					<p>This is awesome infill text to get a feel for layout!!</p>
+					<h3 class="bold blue align-left border-bottom">THE PARTY</h3>
+					<p>This is awesome infill text to get a feel for layout!!</p>
+					<h3 class="bold blue align-left border-bottom">THE VENUES</h3>
+					<p>This is awesome infill text to get a feel for layout!!</p>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="five columns">
+				
+			</div>
 		</div>
 	</div>
 
