--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 	<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
 
+	<script src="js/jquery-1.11.2.min.js"></script>
+	<script src="js/weddingScripting.js"></script>
+
+
 </head>
 <body>
 
@@ -44,27 +48,35 @@
 			</div>
 		</div>
 		<div class="row navigation-top border-bottom">
-			<div class="eight columns"><h4 class="bold"><a href="http://yienandmarc.net" class="pink">THE WEDDING</a></h4></div>
-			<div class="eight columns"><h4 class="bold"><a href="http://yienandmarc.net/accomodation" class="pink">TRAVELLER INFORMATION</a></h4></div>
+			<div class="one-third column"><h4 class="bold"><a href="index.html" class="pink underline">THE WEDDING DAY</a></h4></div>
+			<div class="one-third column"><h4 class="bold"><a href="additional.html" class="pink">ADDITIONAL INFORMATION</a></h4></div>
+			<div class="one-third column"><h4 class="bold"><a href="traveller.html" class="pink">TRAVELLER INFORMATION</a></h4></div>
 		</div>
-		<div class="row">
-			<div class="four columns navigation-left spacing1">
-				<h4 class="bold pink align-left">WEDDING SCHEDULE</h4>
-			</div>
-			<div class="twelve columns spacing1">
-				<div class="content">
-					<h3 class="bold blue align-left border-bottom">THE CEREMONY</h3>
-					<p>This is awesome infill text to get a feel for layout!!</p>
-					<h3 class="bold blue align-left border-bottom">THE PARTY</h3>
-					<p>This is awesome infill text to get a feel for layout!!</p>
-					<h3 class="bold blue align-left border-bottom">THE VENUES</h3>
-					<p>This is awesome infill text to get a feel for layout!!</p>
+		<div class="row spacing2">
+			<div class="row spacing5">
+				<div class="sixteen columns">
+					<h2 class="bold pink align-center">THE WEDDING DAY</h2>
 				</div>
 			</div>
 		</div>
-		<div class="row">
-			<div class="five columns">
-				
+		<div class="spacing2">
+			<div class="row spacing5">
+				<div class="sixteen columns">
+					<h2 class="bold blue align-center">3:00PM - CEREMONY</h2>
+				</div>
+				<div class="sixteen columns">
+					<h2 class="bold blue align-center"><a href="additional.html#tarpeian" class="blue">TARPEIAN LAWN</a></h2>
+				</div>
+			</div>
+		</div>
+		<div class="spacing2">
+			<div class="row spacing5">
+				<div class="sixteen columns">
+					<h2 class="bold blue align-center">6:00PM - PARTY</h2>
+				</div>
+				<div class="sixteen columns">
+					<h2 class="bold blue align-center"><a href="additional.html#grounds" class="blue">GROUNDS OF ALEXANDRIA</a></h2>
+				</div>
 			</div>
 		</div>
 	</div>
