--- a/index.html
+++ b/index.html
@@ -52,36 +52,36 @@
 			<div class="one-third column"><h4 class="bold"><a href="additional.html" class="pink">ADDITIONAL INFORMATION</a></h4></div>
 			<div class="one-third column"><h4 class="bold"><a href="traveller.html" class="pink">TRAVELLER INFORMATION</a></h4></div>
 		</div>
-		<div class="spacing2">
+		<!--<div class="spacing2">
 			<div class="row">
 				<div class="sixteen columns">
 					<h2 class="bold pink align-center">THE WEDDING DAY</h2>
 				</div>
 			</div>
-		</div>
-		<div class="spacing2">
+		</div>-->
+		<div class="spacing1">
 			<div class="row">
 				<div class="sixteen columns">
-					<h2 class="bold blue align-center">3:00PM</h2>
+					<h2 class="bold align-center">CEREMONY</h2>
 				</div>
 				<div class="sixteen columns">
-					<h2 class="bold blue align-center">CEREMONY</h2>
-				</div>
+					<h2 class="bold align-center">3:00PM</h2>
+				</div>				
 				<div class="sixteen columns">
-					<h2 class="bold blue align-center"><a href="additional.html#tarpeian" class="pink">THE TARPEIAN LAWN</a></h2>
+					<h2 class="bold blue align-center"><a href="additional.html#tarpeian" class="blue">THE TARPEIAN LAWN</a></h2>
 				</div>
 			</div>
 		</div>
 		<div class="spacing2">
 			<div class="row">
 				<div class="sixteen columns">
-					<h2 class="bold blue align-center">6:00PM</h2>
+					<h2 class="bold align-center">PARTY</h2>
 				</div>
 				<div class="sixteen columns">
-					<h2 class="bold blue align-center">PARTY</h2>
-				</div>
+					<h2 class="bold align-center">6:00PM</h2>
+				</div>				
 				<div class="sixteen columns">
-					<h2 class="bold blue align-center"><a href="additional.html#grounds" class="pink">THE GROUNDS OF ALEXANDRIA</a></h2>
+					<h2 class="bold blue align-center"><a href="additional.html#grounds" class="blue">THE GROUNDS OF ALEXANDRIA</a></h2>
 				</div>
 			</div>
 		</div>
