--- a/traveller.html
+++ b/traveller.html
@@ -48,30 +48,32 @@
 		</div>
 		<div class="row navigation-top border-bottom">
 			<div class="one-third column"><h4 class="bold"><a href="index.html" class="pink">THE WEDDING DAY</a></h4></div>
-			<div class="one-third column"><h4 class="bold"><a href="additional.html" class="pink underline">ADDITIONAL INFORMATION</a></h4></div>
-			<div class="one-third column"><h4 class="bold"><a href="traveller.html" class="pink">TRAVELLER INFORMATION</a></h4></div>
+			<div class="one-third column"><h4 class="bold"><a href="additional.html" class="pink">ADDITIONAL INFORMATION</a></h4></div>
+			<div class="one-third column"><h4 class="bold"><a href="traveller.html" class="pink underline">TRAVELLER INFORMATION</a></h4></div>
 		</div>
 		<div class="row spacing1">
 			<div class="four columns navigation-left">
-				<h4 class="bold align-left spacing6"><a href="#tarpeian" class="pink">THE TARPEIAN LAWN</a></h4>
-				<h4 class="bold align-left spacing6"><a href="#grounds" class="pink">THE GROUNDS OF ALEXANDRIA</a></h4>
-				<h4 class="bold align-left spacing6"><a href="#insta" class="pink">INSTAGRAM</a></h4>
-				<h4 class="bold align-left spacing6"><a href="#gifts" class="pink">GIFTS</a></h4>
+				<h4 class="bold align-left spacing6"><a href="#accomodation" class="pink">ACCOMODATION</a></h4>
+				<h4 class="bold align-left spacing6"><a href="#transport" class="pink">TRANSPORT</a></h4>
+				<h4 class="bold align-left spacing6"><a href="#food" class="pink">FOOD AND DRINK</a></h4>
+				<h4 class="bold align-left spacing6"><a href="#places" class="pink">PLACES TO VISIT</a></h4>
 			</div>		
 			<div class="ten columns">
-				<h3 class="bold blue align-left border-bottom" id="tarpeian">THE TARPEIAN LAWN</h3>
+				<h3 class="bold blue align-left border-bottom" id="tarpeian">ACCOMODATION</h3>
 					<div class="content-entry">
-						<h4 class="bold align-left spacing6">CEREMONY INFORMATION</h4>
-						<p>The ceremony will be held at the Tarpeian Lawn, located in the Royal Botanical Gardens overlooking the Sydney Opera House and Circular Quay.</p>
-						<p>The ceremony will commence shortly after 3:00PM and is expected to last approximately 45 minutes.</p>
-						<h4 class="bold align-left spacing6">WET WEATHER</h4>
-						<p>The Tarpeian Lawn is an outdoor location.</p>
-						<p>In case of rain on the day, the ceremony will be postponed and held after 6:00PM during the reception at the Grounds of Alexandria.</p>
-						<h4 class="bold align-left spacing6">HOW TO GET HERE</h4>
-						<p>The Tarpeian Lawn can be accessed from Macquarie Street. This is a short walk from Circular Quay for anyone catching public transport. For those catching taxis, you can be dropped off across from the entrance on Macquarie Street.</p>
-						<p>Paid underground parking is available at the Opera House.</p>
-						<h4 class="bold align-left spacing6">MAP</h4>
-						<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1656.5922935648525!2d151.2141052193405!3d-33.85913347535752!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0x641c4c49428e6c24!2sTarpeian+Precinct+Lawn+-+Royal+Botanic+Garden+Sydney!5e0!3m2!1sen!2sau!4v1426416914883" width="600" height="450" frameborder="0" style="border:0"></iframe>
+						<h4 class="bold align-left spacing6">AREAS TO STAY</h4>
+						<p>Sydney has many great places to stay, it all really depends on what you would like to do during your visit.</p>
+						<p>For convenient access to the wedding ceremony at the Tarpeian Lawn, we recommend staying centrally in the Sydney CBD.</p>
+						<p>If you would like to spend time on the beach, we recommend staying in Bondi.</p>
+						<p>To stay nearby great places to eat and drink and to absorb Sydney's urban culture, we recommend staying in the Sydney CBD, Surry Hills or Newtown.</p>
+						<h4 class="bold align-left spacing6">HOTELS</h4>
+						<p>To find a hotel, we recommend using the following websites:</p>
+						<p>www.lastminute.com.au</p>
+						<p>www.wotif.com</p>
+						<h4 class="bold align-left spacing6">APARTMENTS</h4>
+						<p>To find an apartment to rent, we recommend using the following websites:</p>
+						<p>www.stayz.com.au</p>
+						<p>www.airbnb.com</p>
 					</div>
 					<div class="spacing2"></div>
 
