--- a/traveller.html
+++ b/traveller.html
@@ -59,47 +59,87 @@
 				<h4 class="bold align-left spacing6"><a href="#places" class="pink">PLACES TO VISIT</a></h4>
 			</div>		
 			<div class="ten columns">
-				<h3 class="bold blue align-left border-bottom" id="tarpeian">ACCOMODATION</h3>
-					<div class="content-entry">
-						<h4 class="bold align-left spacing6">AREAS TO STAY</h4>
-						<p>Sydney has many great places to stay, it all really depends on what you would like to do during your visit.</p>
-						<p>For convenient access to the wedding ceremony at the Tarpeian Lawn, we recommend staying centrally in the Sydney CBD.</p>
-						<p>If you would like to spend time on the beach, we recommend staying in Bondi.</p>
-						<p>To stay nearby great places to eat and drink and to absorb Sydney's urban culture, we recommend staying in the Sydney CBD, Surry Hills or Newtown.</p>
-						<h4 class="bold align-left spacing6">HOTELS</h4>
-						<p>To find a hotel, we recommend using the following websites:</p>
-						<p>www.lastminute.com.au</p>
-						<p>www.wotif.com</p>
-						<h4 class="bold align-left spacing6">APARTMENTS</h4>
-						<p>To find an apartment to rent, we recommend using the following websites:</p>
-						<p>www.stayz.com.au</p>
-						<p>www.airbnb.com</p>
-					</div>
-					<div class="spacing2"></div>
+				<h3 class="bold blue align-left border-bottom" id="accomodation">ACCOMODATION</h3>
+				<div class="content-entry">
+					<h4 class="bold align-left spacing6">AREAS TO STAY</h4>
+					<p>Sydney has many great places to stay, it all really depends on what you would like to do during your visit.</p>
+					<p>For convenient access to the wedding ceremony at the Tarpeian Lawn, we recommend staying centrally in the Sydney CBD.</p>
+					<p>If you would like to spend time on the beach, we recommend staying in Bondi.</p>
+					<p>To stay nearby great places to eat and drink and to absorb Sydney's urban culture, we recommend staying in the Sydney CBD, Surry Hills or Newtown.</p>
+					<h4 class="bold align-left spacing6">HOTELS</h4>
+					<p>To find a hotel, we recommend using the following websites:</p>
+					<p>www.lastminute.com.au</p>
+					<p>www.wotif.com</p>
+					<h4 class="bold align-left spacing6">APARTMENTS</h4>
+					<p>To find an apartment to rent, we recommend using the following websites:</p>
+					<p>www.stayz.com.au</p>
+					<p>www.airbnb.com</p>
+				</div>
+				<div class="spacing2"></div>
 
-				<h3 class="bold blue align-left border-bottom" id="grounds">THE GROUNDS OF ALEXANDRIA</h3>
-					<div class="content-entry">
-						<h4 class="bold align-left">RECEPTION INFORMATION</h4>
-						<p>The reception will be held following the wedding ceremony at the Grounds of Alexandria.</p>
-						<p>The event will commence at 6:00PM and the venue will remain open until 12:00PM.</p>
-						<p>As the ceremony is only expected to last until 4:00PM, there will be a couple hours to spare for relaxation and to slowly make your way over.</p>	
-						<h4 class="bold align-left">HOW TO GET HERE</h4>
-						<p>There is parking available at the Grounds of Alexandria, the entrance to the car park is off Huntley Street.</p>
-						<p>If you wish to travel by Taxi, the fare from the Tarpeian Lawn should cost between $30-$40 per taxi.</p>
-						<p>Taxis will be available to return you to your accommodation at your request.</p>
-						<p>If you wish to travel by Public Transport, the closest train station (Green Square Station) is a 15 minute walk away.</p>
-						<h4 class="bold align-left">LOCATION</h4>
-						<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3311.185812359262!2d151.194276!3d-33.910617!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0xaf0cfe2766ccbc4a!2sThe+Grounds+of+Alexandria!5e0!3m2!1sen!2sau!4v1426417098919" width="600" height="450" frameborder="0" style="border:0"></iframe>
-					</div>
-					<div class="spacing2"></div>
+				<h3 class="bold blue align-left border-bottom" id="transport">TRANSPORT</h3>
+				<div class="content-entry">
+					<h4 class="bold align-left spacing6">PUBLIC TRANSPORT</h4>
+					<p>Public transport in Sydney is convenient when travelling within the inner suburbs and consists of a network serviced by buses, trains and ferries.</p>
+					<p>We recommend purchasing an Opal card (https://www.opal.com.au/). This is our local equivalent of the Oyster card and can be used to catch all forms of public transport. Don't forget to tap on and off!</p>
+					<h4 class="bold align-left spacing6">Taxi</h4>
+					<p>Taxis are a convenient way to travel around Sydney, but do get expensive unless you are using them for quick trips around the city. Most areas in the inner city are well serviced by taxis and it is usually a short wait to find an empty taxi.</p>
+					<p>To make a booking with a traditional taxi company in Sydney that we recommend using Taxis Combined (http://www.taxiscombined.com.au/) or Silver Service (https://www.silverservice.com.au/).</p>
+					<h4 class="bold align-left spacing6">UBER</h4>
+					<p>Uber is rapidly growing as a convenient and cheaper service in Sydney compared to traditional taxis. If you are comfortable using this service we recommend downloading the app (https://www.uber.com/).</p>
+					<p>The Uber app can be used to book normal taxis as well as the cheaper uberX service.</p>
+					<h4 class="bold align-left spacing6">CAR HIRE</h4>
+					<p>Car hire is the most convenient way to visit the wider Sydney area and to get to many of the beaches. Be mindful about parking in the inner city areas as the cost of parking in Sydney is very expensive.</p>
+					<p>Conventional car hire companies such as Hertz, Avis or Europcar can be found both at the airport and in the city.</p>
+					<p>For a cheaper alternative we recommend using Bayswater Car Rental (https://www.bayswatercarrental.com.au/).</p>
+				</div>
+				<div class="spacing2"></div>
 
-				<h3 class="bold blue align-left border-bottom" id="insta">INSTAGRAM</h3>
-					<div class="content-entry">
-						<h4 class="bold align-left">SHARE YOUR PHOTOS WITH US</h4>
-						<p>We would like to share any photos you take during the day with everyone else.</p>
-						<p>An instagram printer will be at the venue, set to print any photos shared to Instagram with the hashtag #yienandmarc</p>
-					</div>
-					<div class="spacing2"></div>
+				<h3 class="bold blue align-left border-bottom" id="food">FOOD AND DRINK</h3>
+				<div class="content-entry">
+					<h4 class="bold align-left spacing6">RESTAURANTS</h4>
+					<p>Chat Thai - best thai in Sydney</p>
+					<p>BBQ King - for cheap roast duck and pork chinese style, don't forget to order the house soup</p>
+					<p>Mary's - for tasty burgers, eclectic selection of local beers and loud metal music</p>
+					<p>Da Mario - favourite pizza, neapolitan style</p>
+					<p>Movida - favourite but expensive, includes tapas like dishes</p>
+					<p>Aqua - go for the views but food is also nice, have a lunch special</p>
+					<p>Quay - most expensive but stunning views of Opera House</p>
+					<h4 class="bold align-left spacing6">COFFEE</h4>
+					<p>Campos Coffee</p>
+					<p>Toby's Estate</p>
+					<p>Gumption</p>
+					<h4 class="bold align-left spacing6">BARS</h4>
+					<p>Barber Shop</p>
+					<p>Marble Bar</p>
+					<p>The Beresford</p>
+					<p>The Rose</p>
+				</div>
+				<div class="spacing2"></div>
+
+				<h3 class="bold blue align-left border-bottom" id="places">PLACES TO VISIT</h3>
+				<div class="content-entry">
+					<h4 class="bold align-left spacing6">BEACHES</h4>
+					<p>Bondi - Sydney classic, can get very busy but always clean and beautiful. Expansive shopping area nearby with retail, food & drink.</p>
+					<p>Manly - ferry ride and beautiful beach, bars and cafes close by.</p>
+					<p>Coogee - also a classic, beach can get crowded and dirty, but nearby "Pavilion" has great food and atmosphere for afternoon post-beach relaxation.</p>
+					<p>Avalon - distant but beautiful sand and charming environment</p>
+					<p>Palm Beach - the most distant Sydney beach but famous as the backdrop to one of Australia's favourite TV shows. beautiful and fun swimming.</p>
+					<h4 class="bold align-left spacing6">MUSEUMS & GALLERIES</h4>
+					<p>MCA</p>
+					<p>White Rabbit</p>
+					<h4 class="bold align-left spacing6">SHOPPING</h4>
+					<p>Pitt Street Mall</p>
+					<p>Chinatown</p>
+					<p>QVB</p>
+					<h4 class="bold align-left spacing6">TARONGA ZOO</h4>
+					<p></p>
+					<h4 class="bold align-left spacing6">ROYAL BOTANICAL GARDENS AND SYDNEY HARBOUR</h4>
+					<p></p>
+				</div>
+				<div class="spacing2"></div>
+
+
 
 			</div>
 		</div>
