Final version for upload

--- a/traveller.html
+++ b/traveller.html
@@ -68,12 +68,12 @@
 					<p>To stay nearby great places to eat and drink and to absorb Sydney's urban culture, we recommend staying in the Sydney CBD, Surry Hills or Newtown.</p>
 					<h4 class="bold align-left spacing6">HOTELS</h4>
 					<p>To find a hotel, we recommend using the following websites:</p>
-					<p>www.lastminute.com.au</p>
-					<p>www.wotif.com</p>
+					<p<a href="https://www.lastminute.com.au/" class="textlink" target="_blank">www.lastminute.com.au</p<a></p>
+					<p><a href="https://www.wotif.com/" class="textlink" target="_blank">www.wotif.com</a></p>
 					<h4 class="bold align-left spacing6">APARTMENTS</h4>
 					<p>To find an apartment to rent, we recommend using the following websites:</p>
-					<p>www.stayz.com.au</p>
-					<p>www.airbnb.com</p>
+					<p><a href="https://www.stayz.com.au/" class="textlink" target="_blank">www.stayz.com.au</a></p>
+					<p><a href="https://www.airbnb.com/" class="textlink" target="_blank">www.airbnb.com</a></p>
 				</div>
 				<div class="spacing2"></div>
 
@@ -81,57 +81,78 @@
 				<div class="content-entry">
 					<h4 class="bold align-left spacing6">PUBLIC TRANSPORT</h4>
 					<p>Public transport in Sydney is convenient when travelling within the inner suburbs and consists of a network serviced by buses, trains and ferries.</p>
-					<p>We recommend purchasing an Opal card (https://www.opal.com.au/). This is our local equivalent of the Oyster card and can be used to catch all forms of public transport. Don't forget to tap on and off!</p>
+					<p>We recommend purchasing an <a href="https://www.opal.com.au/" class="textlink" target="_blank">Opal card</a>. This is our local equivalent of the Oyster card and can be used to catch all forms of public transport. Don't forget to tap on and off!</p>
 					<h4 class="bold align-left spacing6">Taxi</h4>
 					<p>Taxis are a convenient way to travel around Sydney, but do get expensive unless you are using them for quick trips around the city. Most areas in the inner city are well serviced by taxis and it is usually a short wait to find an empty taxi.</p>
-					<p>To make a booking with a traditional taxi company in Sydney that we recommend using Taxis Combined (http://www.taxiscombined.com.au/) or Silver Service (https://www.silverservice.com.au/).</p>
+					<p>To make a booking with a traditional taxi company in Sydney that we recommend using <a href="http://www.taxiscombined.com.au/" class="textlink" target="_blank">Taxis Combined</a> or <a href="https://www.silverservice.com.au/" class="textlink" target="_blank">Silver Service</a>.</p>
 					<h4 class="bold align-left spacing6">UBER</h4>
-					<p>Uber is rapidly growing as a convenient and cheaper service in Sydney compared to traditional taxis. If you are comfortable using this service we recommend downloading the app (https://www.uber.com/).</p>
+					<p>Uber is rapidly growing as a convenient and cheaper service in Sydney compared to traditional taxis. If you are comfortable using this service we recommend <a href="https://www.uber.com/" class="textlink" target="_blank">downloading the app</a>.</p>
 					<p>The Uber app can be used to book normal taxis as well as the cheaper uberX service.</p>
 					<h4 class="bold align-left spacing6">CAR HIRE</h4>
-					<p>Car hire is the most convenient way to visit the wider Sydney area and to get to many of the beaches. Be mindful about parking in the inner city areas as the cost of parking in Sydney is very expensive.</p>
+					<p>Car hire is the most convenient way to visit the wider Sydney area and to get to many of the beaches. Be mindful about parking in the inner city areas as the cost of parking in Sydney is very expensive (and Sydney drivers are vicious, Yien included).</p>
 					<p>Conventional car hire companies such as Hertz, Avis or Europcar can be found both at the airport and in the city.</p>
-					<p>For a cheaper alternative we recommend using Bayswater Car Rental (https://www.bayswatercarrental.com.au/).</p>
+					<p>For a cheaper alternative we recommend using <a href="https://www.bayswatercarrental.com.au/" class="textlink" target="_blank">Bayswater Car Rental</a>.</p>
 				</div>
 				<div class="spacing2"></div>
 
 				<h3 class="bold blue align-left border-bottom" id="food">FOOD AND DRINK</h3>
 				<div class="content-entry">
 					<h4 class="bold align-left spacing6">RESTAURANTS</h4>
-					<p>Chat Thai - best thai in Sydney</p>
-					<p>BBQ King - for cheap roast duck and pork chinese style, don't forget to order the house soup</p>
-					<p>Mary's - for tasty burgers, eclectic selection of local beers and loud metal music</p>
-					<p>Da Mario - favourite pizza, neapolitan style</p>
-					<p>Movida - favourite but expensive, includes tapas like dishes</p>
-					<p>Aqua - go for the views but food is also nice, have a lunch special</p>
-					<p>Quay - most expensive but stunning views of Opera House</p>
+					<ul>
+						<li type="circle">Chat Thai - best thai in Sydney. They do a mean supper. Pad Thai (of course!), the deep fried dough with kaya and skewers galore.</li>
+						<li type="circle">BBQ King - for cheap roast duck and pork chinese style, don't forget to order the house soup (if it doesn’t come out automatically).</li>
+						<li type="circle">Mary's - for tasty burgers (vego included), an eclectic selection of local beers and loud metal music.</li>
+						<li type="circle">Da Mario - pizza, neapolitan style</li>
+						<li type="circle">Movida - tapas like dishes.</li>
+						<li type="circle">Aqua - go for the views but food is also nice, have a lunch special and go explore Luna Park afterwards.</li>
+						<li type="circle">Quay - for when you feel like a splurge among the stunning views of Opera House.</li>
+						<li type="circle">Nomad – Housemade halloumi anyone?</li>
+						<li type="circle">Ester – Roasted. Whole. Cauliflower.</li>
+						<li type="circle">Hartyard – An absolute fave, inner west at its best.</li>
+						<li type="circle">Mr Wong’s – Part of the Hemmes empire, serving upmarket Chinese food in a cavernous sandstone building that Yien and Marc used to go clubbing in.</li>
+						<li type="circle">Gelatomessina – The infamous line.  The famous gelato.</li>
+						<li type="circle">N2extremegelato – gelato made with kitchenaids and liquid nitrogen (like the name suggests).  Safety equipment minimal.</li>
+					</ul>
 					<h4 class="bold align-left spacing6">COFFEE</h4>
-					<p>Campos Coffee</p>
-					<p>Toby's Estate</p>
-					<p>Gumption</p>
+					<ul>
+						<li type="circle">Campos Coffee – an institution.</li>
+						<li type="circle">Toby's Estate</li>
+						<li type="circle">Gumption</li>
+						<li type="circle">Devon – When Yien needs a caffeine hit on the way to work.</li>
+						<li type="circle">The Grounds of Alexandria – check out the brunch powerhouse outside wedding hours.</li>
+						<li type="circle">Brewtown Newtown – cronuts, cold brew and hipsters.</li>
+					</ul>
 					<h4 class="bold align-left spacing6">BARS</h4>
-					<p>Barber Shop</p>
-					<p>Marble Bar</p>
-					<p>The Beresford</p>
-					<p>The Rose</p>
+					<ul>
+						<li type="circle">Barber Shop</li>
+						<li type="circle">Marble Bar</li>
+						<li type="circle">The Beresford</li>
+						<li type="circle">The Rose</li>
+					</ul>
 				</div>
 				<div class="spacing2"></div>
 
 				<h3 class="bold blue align-left border-bottom" id="places">PLACES TO VISIT</h3>
 				<div class="content-entry">
 					<h4 class="bold align-left spacing6">BEACHES</h4>
-					<p>Bondi - Sydney classic, can get very busy but always clean and beautiful. Expansive shopping area nearby with retail, food & drink.</p>
-					<p>Manly - ferry ride and beautiful beach, bars and cafes close by.</p>
-					<p>Coogee - also a classic, beach can get crowded and dirty, but nearby "Pavilion" has great food and atmosphere for afternoon post-beach relaxation.</p>
-					<p>Avalon - distant but beautiful sand and charming environment</p>
-					<p>Palm Beach - the most distant Sydney beach but famous as the backdrop to one of Australia's favourite TV shows. beautiful and fun swimming.</p>
+					<ul>
+						<li type="circle">Bondi - Sydney classic, can get very busy but always clean and beautiful. Expansive shopping area nearby with retail, food & drink.</li>
+						<li type="circle">Manly - ferry ride and beautiful beach, bars and cafes close by.</li>
+						<li type="circle">Coogee - also a classic, beach can get crowded and dirty, but nearby "Pavilion" has great food and atmosphere for afternoon post-beach relaxation.</li>
+						<li type="circle">Avalon - distant but beautiful sand and charming environment</li>
+						<li type="circle">Palm Beach - the most distant Sydney beach but famous as the backdrop to one of Australia's favourite TV shows. beautiful and fun swimming.</li>
+					</ul>
 					<h4 class="bold align-left spacing6">MUSEUMS & GALLERIES</h4>
-					<p>MCA</p>
-					<p>White Rabbit</p>
+					<ul>
+						<li type="circle">MCA</li>
+						<li type="circle">White Rabbit</li>
+					</ul>
 					<h4 class="bold align-left spacing6">SHOPPING</h4>
-					<p>Pitt Street Mall</p>
-					<p>Chinatown</p>
-					<p>QVB</p>
+					<ul>
+						<li type="circle">Pitt Street Mall</li>
+						<li type="circle">Chinatown</li>
+						<li type="circle">QVB</li>
+					</ul>
 					<h4 class="bold align-left spacing6">TARONGA ZOO</h4>
 					<p></p>
 					<h4 class="bold align-left spacing6">ROYAL BOTANICAL GARDENS AND SYDNEY HARBOUR</h4>
