--- a/additional.html
+++ b/additional.html
@@ -55,6 +55,7 @@
 			<div class="four columns navigation-left">
 				<h4 class="bold align-left spacing6"><a href="#tarpeian" class="pink">THE TARPEIAN LAWN</a></h4>
 				<h4 class="bold align-left spacing6"><a href="#grounds" class="pink">THE GROUNDS OF ALEXANDRIA</a></h4>
+				<h4 class="bold align-left spacing6"><a href="#between" class="pink">BETWEEN THE CEREMONY AND PARTY</a></h4>
 				<h4 class="bold align-left spacing6"><a href="#insta" class="pink">INSTAGRAM</a></h4>
 				<h4 class="bold align-left spacing6"><a href="#gifts" class="pink">GIFTS</a></h4>
 			</div>		
@@ -62,12 +63,12 @@
 				<h3 class="bold blue align-left border-bottom" id="tarpeian">THE TARPEIAN LAWN</h3>
 					<div class="content-entry">
 						<h4 class="bold align-left spacing6">CEREMONY INFORMATION</h4>
-						<p>The ceremony will be held at the Tarpeian Lawn, located in the Royal Botanical Gardens overlooking the Sydney Opera House and Circular Quay.</p>
-						<p>The ceremony will commence shortly after 3:00PM and is expected to last approximately 45 minutes.</p>
-						<h4 class="bold align-left spacing6">WET WEATHER</h4>
-						<p>The Tarpeian Lawn is an outdoor location.</p>
-						<p>In case of rain on the day, the ceremony will be postponed and held after 6:00PM during the reception at the Grounds of Alexandria.</p>
-						<h4 class="bold align-left spacing6">HOW TO GET HERE</h4>
+						<p>The ceremony will be held at the Tarpeian Lawn, located in the Royal Botanic Gardens overlooking the Sydney Opera House and Circular Quay.</p>
+						<p>The ceremony will commence shortly after 3:00PM.</p>
+						<h4 class="bold align-left spacing6">ADDITIONAL INFORMATION</h4>
+						<p>TThe Tarpeian Lawn is an outdoor location. There is some shade provided by some large trees, however we recommend being prepared with protection from the sun if this is a concern for you.</p>
+						<p>In case of rain on the day, the ceremony will be postponed and held after 6:00PM during the party at the Grounds of Alexandria. We will contact you on the day if this is the case.</p>
+						<h4 class="bold align-left spacing6">LOCATION</h4>
 						<p>The Tarpeian Lawn can be accessed from Macquarie Street. This is a short walk from Circular Quay for anyone catching public transport. For those catching taxis, you can be dropped off across from the entrance on Macquarie Street.</p>
 						<p>Paid underground parking is available at the Opera House.</p>
 						<h4 class="bold align-left spacing6">MAP</h4>
@@ -77,25 +78,53 @@
 
 				<h3 class="bold blue align-left border-bottom" id="grounds">THE GROUNDS OF ALEXANDRIA</h3>
 					<div class="content-entry">
-						<h4 class="bold align-left">RECEPTION INFORMATION</h4>
-						<p>The reception will be held following the wedding ceremony at the Grounds of Alexandria.</p>
-						<p>The event will commence at 6:00PM and the venue will remain open until 12:00PM.</p>
+						<h4 class="bold align-left">WEDDING PARTY VENUE</h4>
+						<p>The party to celebrate our wedding will be held following the wedding ceremony at The Grounds of Alexandria in the Atrium.</p>
+						<p>The party will  start at 6:00PM and the venue will remain open until 12:00PM.</p>
 						<p>As the ceremony is only expected to last until 4:00PM, there will be a couple hours to spare for relaxation and to slowly make your way over.</p>	
-						<h4 class="bold align-left">HOW TO GET HERE</h4>
-						<p>There is parking available at the Grounds of Alexandria, the entrance to the car park is off Huntley Street.</p>
-						<p>If you wish to travel by Taxi, the fare from the Tarpeian Lawn should cost between $30-$40 per taxi.</p>
+						<h4 class="bold align-left">ADDITIONAL INFORMATION</h4>
+						<p>There is parking available at the Grounds of Alexandria, either by entering on Huntley Street or Bourke Road. If you wish to travel by Taxi, the fare from the Tarpeian Lawn should cost between $30-$40.</p>
 						<p>Taxis will be available to return you to your accommodation at your request.</p>
-						<p>If you wish to travel by Public Transport, the closest train station (Green Square Station) is a 15 minute walk away.</p>
 						<h4 class="bold align-left">LOCATION</h4>
 						<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3311.185812359262!2d151.194276!3d-33.910617!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0xaf0cfe2766ccbc4a!2sThe+Grounds+of+Alexandria!5e0!3m2!1sen!2sau!4v1426417098919" width="600" height="450" frameborder="0" style="border:0"></iframe>
 					</div>
 					<div class="spacing2"></div>
 
+				<h3 class="bold blue align-left border-bottom" id="between">BETWEEN THE CEREMONY AND PARTY</h3>
+					<div class="content-entry">
+						<h4 class="bold align-left">WHAT TO DO?</h4>
+						<p>You’ll have a bit of time up your sleeve.  Allow about 30 minutes to get from the Tarpeian Lawn to The Grounds of Alexandria.</p>
+						<p>Here are our suggestions.</p>
+						<p>If you want to stay near the harbour (who wouldn’t?):</p>
+						<ul>
+							<li type="circle">Take a walk from the ceremony to <a href="https://www.google.com.au/maps/place/Mrs+Macquarie's+Chair/@-33.85937,151.22225,15z/data=!4m2!3m1!1s0x0:0x43bfb6b9da05a763" class="textlink" target="_blank">Mrs Macquarie’s Chair</a>. The view is stunning.</li>
+							<li type="circle">Enjoy afternoon drinks at <a href="http://operabar.com.au/" class="textlink" target="_blank">Opera Bar</a>.</li>
+							<li type="circle">Meander through the <a href="http://www.rbgsyd.nsw.gov.au/" class="textlink" target="_blank">Royal Botanic Gardens</a>.  We’ll be there getting some more photos with our <a href="http://www.thesimplethingsstudio.com/scott/" class="textlink" target="_blank">amazing photographer</a>.  Photobomb anyone?</li>
+							<li type="circle">Get your photos at the Sydney Opera House and Harbour Bridge.  They’re not called icons for nothing!</li>
+						</ul>
+						<p>If you want to spend time at The Grounds of Alexandria (start the party early!):</p>
+						<ul>
+							<li type="circle">Grab a drink at the <a href="http://thegrounds.com.au/Spaces/the-potting-shed/" class="textlink" target="_blank">Potting Shed</a>. It’s right behind the Atrium.</li>
+							<li type="circle">Visit Kevin Bacon, Bradley and their friends in the animal farm (for the young and young at heart!)</li>
+							<li type="circle">Lounge around the garden.  Sydney’s urban sanctuary.</li>
+							<li type="circle">Spot us when we do the next round of wedding photos.</li>
+						</ul>
+
+
+					</div>
+					<div class="spacing2"></div>
+
 				<h3 class="bold blue align-left border-bottom" id="insta">INSTAGRAM</h3>
 					<div class="content-entry">
-						<h4 class="bold align-left">SHARE YOUR PHOTOS WITH US</h4>
-						<p>We would like to share any photos you take during the day with everyone else.</p>
-						<p>An instagram printer will be at the venue, set to print any photos shared to Instagram with the hashtag #yienandmarc</p>
+						<h4 class="bold align-left">Share your photos with us #yienandmarc</h4>
+						<p>Don’t deny it, you’re in insta fiend.  We’re having an Instagram printer at the party so the entire venue is your private photobooth (props and all!).  Yes, we do multi-task like mad, but we can’t be everywhere at once.  Share your photos so we can see your night AND ours! </p>
+					</div>
+					<div class="spacing2"></div>
+
+				<h3 class="bold blue align-left border-bottom" id="gifts">GIFTS</h3>
+					<div class="content-entry">
+						<h4 class="bold align-left">WHAT’S THE DEAL?</h4>
+						<p>We’ll spare you the gag-inducing wishing well poems (we love you too much). Your presence is present enough. It’s an absolute privilege for us to be with you on our wedding day. If you do insist, we would appreciate a <a href="http://en.wikipedia.org/wiki/Red_envelope" class="textlink" target="_blank">hong bao/red envelope</a> instead of a gift.</p>
 					</div>
 					<div class="spacing2"></div>
 
