Updated with analytics testing

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 	<script src="js/jquery-1.11.2.min.js"></script>
 	<script src="js/weddingScripting.js"></script>
-
+	<script src="js/wedding_analytics.js"></script>
 
 </head>
 <body>
@@ -44,13 +44,13 @@
 	<div class="container">
 		<div class="row header spacing1 border-bottom">
 			<div class="sixteen columns">
-			<h2 class="bold blue"><a href="http://yienandmarc.net/" class="blue">YIEN + MARC ARE GETTING MARRIED!</a></h2>
+			<h2 class="bold blue"><a href="http://yienandmarc.net/" class="blue header1">YIEN + MARC ARE GETTING MARRIED!</a></h2>
 			</div>
 		</div>
 		<div class="row navigation-top border-bottom">
-			<div class="one-third column"><h4 class="bold"><a href="index.html" class="pink underline">THE WEDDING DAY</a></h4></div>
-			<div class="one-third column"><h4 class="bold"><a href="additional.html" class="pink">ADDITIONAL INFORMATION</a></h4></div>
-			<div class="one-third column"><h4 class="bold"><a href="traveller.html" class="pink">TRAVELLER INFORMATION</a></h4></div>
+			<div class="one-third column"><h4 class="bold"><a href="index.html" class="pink underline header2">THE WEDDING DAY</a></h4></div>
+			<div class="one-third column"><h4 class="bold"><a href="additional.html" class="pink header2">ADDITIONAL INFORMATION</a></h4></div>
+			<div class="one-third column"><h4 class="bold"><a href="traveller.html" class="pink header2">TRAVELLER INFORMATION</a></h4></div>
 		</div>
 		<!--<div class="spacing2">
 			<div class="row">
@@ -68,7 +68,7 @@
 					<h2 class="bold align-center">3:00PM</h2>
 				</div>				
 				<div class="sixteen columns">
-					<h2 class="bold blue align-center"><a href="additional.html#tarpeian" class="blue">THE TARPEIAN LAWN</a></h2>
+					<h2 class="bold blue align-center"><a href="additional.html#tarpeian" class="blue header3">THE TARPEIAN LAWN</a></h2>
 				</div>
 			</div>
 		</div>
@@ -81,7 +81,7 @@
 					<h2 class="bold align-center">6:00PM</h2>
 				</div>				
 				<div class="sixteen columns">
-					<h2 class="bold blue align-center"><a href="additional.html#grounds" class="blue">THE GROUNDS OF ALEXANDRIA</a></h2>
+					<h2 class="bold blue align-center"><a href="additional.html#grounds" class="blue header3">THE GROUNDS OF ALEXANDRIA</a></h2>
 				</div>
 			</div>
 		</div>
