--- a/traveller.html
+++ b/traveller.html
@@ -36,6 +36,7 @@
 
 	<script src="js/jquery-1.11.2.min.js"></script>
 	<script src="js/weddingScripting.js"></script>
+	<script src="js/wedding_analytics.js"></script>
 
 </head>
 <body>
@@ -43,20 +44,20 @@
 	<div class="container">
 		<div class="row header spacing1 border-bottom">
 			<div class="sixteen columns">
-			<h2 class="bold blue"><a href="http://yienandmarc.net/" class="blue">YIEN + MARC ARE GETTING MARRIED!</a></h2>
+			<h2 class="bold blue"><a href="http://yienandmarc.net/" class="blue header1">YIEN + MARC ARE GETTING MARRIED!</a></h2>
 			</div>
 		</div>
 		<div class="row navigation-top border-bottom">
-			<div class="one-third column"><h4 class="bold"><a href="index.html" class="pink">THE WEDDING DAY</a></h4></div>
-			<div class="one-third column"><h4 class="bold"><a href="additional.html" class="pink">ADDITIONAL INFORMATION</a></h4></div>
-			<div class="one-third column"><h4 class="bold"><a href="traveller.html" class="pink underline">TRAVELLER INFORMATION</a></h4></div>
+			<div class="one-third column"><h4 class="bold"><a href="index.html" class="pink header2">THE WEDDING DAY</a></h4></div>
+			<div class="one-third column"><h4 class="bold"><a href="additional.html" class="pink header2">ADDITIONAL INFORMATION</a></h4></div>
+			<div class="one-third column"><h4 class="bold"><a href="traveller.html" class="pink underline header2">TRAVELLER INFORMATION</a></h4></div>
 		</div>
 		<div class="row spacing1">
 			<div class="four columns navigation-left">
-				<h4 class="bold align-left spacing6"><a href="#accomodation" class="pink">ACCOMODATION</a></h4>
-				<h4 class="bold align-left spacing6"><a href="#transport" class="pink">TRANSPORT</a></h4>
-				<h4 class="bold align-left spacing6"><a href="#food" class="pink">FOOD AND DRINK</a></h4>
-				<h4 class="bold align-left spacing6"><a href="#places" class="pink">PLACES TO VISIT</a></h4>
+				<h4 class="bold align-left spacing6"><a href="#accomodation" class="pink header3">ACCOMODATION</a></h4>
+				<h4 class="bold align-left spacing6"><a href="#transport" class="pink header3">TRANSPORT</a></h4>
+				<h4 class="bold align-left spacing6"><a href="#food" class="pink header3">FOOD AND DRINK</a></h4>
+				<h4 class="bold align-left spacing6"><a href="#places" class="pink header3">PLACES TO VISIT</a></h4>
 			</div>		
 			<div class="ten columns">
 				<h3 class="bold blue align-left border-bottom" id="accomodation">ACCOMODATION</h3>
@@ -65,7 +66,7 @@
 					<p>Sydney has many great places to stay, it all really depends on what you would like to do during your visit.</p>
 					<p>For convenient access to the wedding ceremony at the Tarpeian Lawn, we recommend staying centrally in the Sydney CBD.</p>
 					<p>If you would like to spend time on the beach, we recommend staying in Bondi.</p>
-					<p>To stay nearby great places to eat and drink and to absorb Sydney's urban culture, we recommend staying in the Sydney CBD, Surry Hills or Newtown.</p>
+					<p>To stay nearby, in great places to eat and drink and to absorb Sydney's urban culture, we recommend staying in the Sydney CBD, Surry Hills or Newtown.</p>
 					<h4 class="bold align-left spacing6">HOTELS</h4>
 					<p>To find a hotel, we recommend using the following websites:</p>
 					<p<a href="https://www.lastminute.com.au/" class="textlink" target="_blank">www.lastminute.com.au</p<a></p>
@@ -83,7 +84,7 @@
 					<p>Public transport in Sydney is convenient when travelling within the inner suburbs and consists of a network serviced by buses, trains and ferries.</p>
 					<p>We recommend purchasing an <a href="https://www.opal.com.au/" class="textlink" target="_blank">Opal card</a>. This is our local equivalent of the Oyster card and can be used to catch all forms of public transport. Don't forget to tap on and off!</p>
 					<h4 class="bold align-left spacing6">Taxi</h4>
-					<p>Taxis are a convenient way to travel around Sydney, but do get expensive unless you are using them for quick trips around the city. Most areas in the inner city are well serviced by taxis and it is usually a short wait to find an empty taxi.</p>
+					<p>Taxis are a convenient way to travel around Sydney, but do get expensive unless you are using them for quick trips around the city. Most areas in the inner city are well serviced by taxis and it is usually only a short wait to find an empty taxi.</p>
 					<p>To make a booking with a traditional taxi company in Sydney that we recommend using <a href="http://www.taxiscombined.com.au/" class="textlink" target="_blank">Taxis Combined</a> or <a href="https://www.silverservice.com.au/" class="textlink" target="_blank">Silver Service</a>.</p>
 					<h4 class="bold align-left spacing6">UBER</h4>
 					<p>Uber is rapidly growing as a convenient and cheaper service in Sydney compared to traditional taxis. If you are comfortable using this service we recommend <a href="https://www.uber.com/" class="textlink" target="_blank">downloading the app</a>.</p>
@@ -105,7 +106,7 @@
 						<li type="circle">Da Mario - pizza, neapolitan style</li>
 						<li type="circle">Movida - tapas like dishes.</li>
 						<li type="circle">Aqua - go for the views but food is also nice, have a lunch special and go explore Luna Park afterwards.</li>
-						<li type="circle">Quay - for when you feel like a splurge among the stunning views of Opera House.</li>
+						<li type="circle">Quay - for when you feel like a splurge among the stunning views of the harbour</li>
 						<li type="circle">Nomad – Housemade halloumi anyone?</li>
 						<li type="circle">Ester – Roasted. Whole. Cauliflower.</li>
 						<li type="circle">Hartyard – An absolute fave, inner west at its best.</li>
@@ -136,8 +137,8 @@
 				<div class="content-entry">
 					<h4 class="bold align-left spacing6">BEACHES</h4>
 					<ul>
-						<li type="circle">Bondi - Sydney classic, can get very busy but always clean and beautiful. Expansive shopping area nearby with retail, food & drink.</li>
-						<li type="circle">Manly - ferry ride and beautiful beach, bars and cafes close by.</li>
+						<li type="circle">Bondi - Sydney classic and a must do, weather permitting, can get very busy but always clean and beautiful. Expansive shopping area nearby with retail, food & drink.</li>
+						<li type="circle">Manly - a stunning ferry ride from Circular Quay and a beautiful beach, bars and cafes close by.</li>
 						<li type="circle">Coogee - also a classic, beach can get crowded and dirty, but nearby "Pavilion" has great food and atmosphere for afternoon post-beach relaxation.</li>
 						<li type="circle">Avalon - distant but beautiful sand and charming environment</li>
 						<li type="circle">Palm Beach - the most distant Sydney beach but famous as the backdrop to one of Australia's favourite TV shows. beautiful and fun swimming.</li>
@@ -149,9 +150,11 @@
 					</ul>
 					<h4 class="bold align-left spacing6">SHOPPING</h4>
 					<ul>
-						<li type="circle">Pitt Street Mall</li>
-						<li type="circle">Chinatown</li>
-						<li type="circle">QVB</li>
+						<li type="circle">Pitt Street Mall - the most central</li>
+						<li type="circle">Chinatown - to find a bargain</li>
+						<li type="circle">QVB - beautiful building</li>
+						<li type="circle">Oxford St/Paddington - fashion</li>
+
 					</ul>
 					<h4 class="bold align-left spacing6">TARONGA ZOO</h4>
 					<p></p>
