--- a/additional.html
+++ b/additional.html
@@ -36,6 +36,7 @@
 
 	<script src="js/jquery-1.11.2.min.js"></script>
 	<script src="js/weddingScripting.js"></script>
+	<script src="js/wedding_analytics.js"></script>
 
 </head>
 <body>
@@ -43,21 +44,21 @@
 	<div class="container">
 		<div class="row header spacing1 border-bottom">
 			<div class="sixteen columns">
-			<h2 class="bold blue"><a href="http://yienandmarc.net/" class="blue">YIEN + MARC ARE GETTING MARRIED!</a></h2>
+			<h2 class="bold blue"><a href="http://yienandmarc.net/" class="blue header1">YIEN + MARC ARE GETTING MARRIED!</a></h2>
 			</div>
 		</div>
 		<div class="row navigation-top border-bottom">
-			<div class="one-third column"><h4 class="bold"><a href="index.html" class="pink">THE WEDDING DAY</a></h4></div>
-			<div class="one-third column"><h4 class="bold"><a href="additional.html" class="pink underline">ADDITIONAL INFORMATION</a></h4></div>
-			<div class="one-third column"><h4 class="bold"><a href="traveller.html" class="pink">TRAVELLER INFORMATION</a></h4></div>
+			<div class="one-third column"><h4 class="bold"><a href="index.html" class="pink header2">THE WEDDING DAY</a></h4></div>
+			<div class="one-third column"><h4 class="bold"><a href="additional.html" class="pink underline header2">ADDITIONAL INFORMATION</a></h4></div>
+			<div class="one-third column"><h4 class="bold"><a href="traveller.html" class="pink header2">TRAVELLER INFORMATION</a></h4></div>
 		</div>
 		<div class="row spacing1">
 			<div class="four columns navigation-left">
-				<h4 class="bold align-left spacing6"><a href="#tarpeian" class="pink">THE TARPEIAN LAWN</a></h4>
-				<h4 class="bold align-left spacing6"><a href="#grounds" class="pink">THE GROUNDS OF ALEXANDRIA</a></h4>
-				<h4 class="bold align-left spacing6"><a href="#between" class="pink">BETWEEN THE CEREMONY AND PARTY</a></h4>
-				<h4 class="bold align-left spacing6"><a href="#insta" class="pink">INSTAGRAM</a></h4>
-				<h4 class="bold align-left spacing6"><a href="#gifts" class="pink">GIFTS</a></h4>
+				<h4 class="bold align-left spacing6"><a href="#tarpeian" class="pink header3">THE TARPEIAN LAWN</a></h4>
+				<h4 class="bold align-left spacing6"><a href="#grounds" class="pink header3">THE GROUNDS OF ALEXANDRIA</a></h4>
+				<h4 class="bold align-left spacing6"><a href="#between" class="pink header3">BETWEEN THE CEREMONY AND PARTY</a></h4>
+				<h4 class="bold align-left spacing6"><a href="#insta" class="pink header3">INSTAGRAM</a></h4>
+				<h4 class="bold align-left spacing6"><a href="#gifts" class="pink header3">GIFTS</a></h4>
 			</div>		
 			<div class="ten columns">
 				<h3 class="bold blue align-left border-bottom" id="tarpeian">THE TARPEIAN LAWN</h3>
@@ -66,7 +67,7 @@
 						<p>The ceremony will be held at the Tarpeian Lawn, located in the Royal Botanic Gardens overlooking the Sydney Opera House and Circular Quay.</p>
 						<p>The ceremony will commence shortly after 3:00PM.</p>
 						<h4 class="bold align-left spacing6">ADDITIONAL INFORMATION</h4>
-						<p>TThe Tarpeian Lawn is an outdoor location. There is some shade provided by some large trees, however we recommend being prepared with protection from the sun if this is a concern for you.</p>
+						<p>The Tarpeian Lawn is an outdoor location. There is some shade provided by some large trees, however we recommend being prepared with protection from the sun if this is a concern for you.</p>
 						<p>In case of rain on the day, the ceremony will be postponed and held after 6:00PM during the party at the Grounds of Alexandria. We will contact you on the day if this is the case.</p>
 						<h4 class="bold align-left spacing6">LOCATION</h4>
 						<p>The Tarpeian Lawn can be accessed from Macquarie Street. This is a short walk from Circular Quay for anyone catching public transport. For those catching taxis, you can be dropped off across from the entrance on Macquarie Street.</p>
@@ -81,7 +82,7 @@
 						<h4 class="bold align-left">WEDDING PARTY VENUE</h4>
 						<p>The party to celebrate our wedding will be held following the wedding ceremony at The Grounds of Alexandria in the Atrium.</p>
 						<p>The party will  start at 6:00PM and the venue will remain open until 12:00PM.</p>
-						<p>As the ceremony is only expected to last until 4:00PM, there will be a couple hours to spare for relaxation and to slowly make your way over.</p>	
+						<p>As the ceremony is only expected to last until 4:00PM, there will be a couple hours to spare for relaxation and to slowly make your way over. Please see our suggestions for what you can do during this time below.</p>	
 						<h4 class="bold align-left">ADDITIONAL INFORMATION</h4>
 						<p>There is parking available at the Grounds of Alexandria, either by entering on Huntley Street or Bourke Road. If you wish to travel by Taxi, the fare from the Tarpeian Lawn should cost between $30-$40.</p>
 						<p>Taxis will be available to return you to your accommodation at your request.</p>
@@ -95,14 +96,14 @@
 						<h4 class="bold align-left">WHAT TO DO?</h4>
 						<p>You’ll have a bit of time up your sleeve.  Allow about 30 minutes to get from the Tarpeian Lawn to The Grounds of Alexandria.</p>
 						<p>Here are our suggestions.</p>
-						<p>If you want to stay near the harbour (who wouldn’t?):</p>
+						<h4 class="bold align-left">If you want to stay near the harbour (who wouldn’t?):</h4>
 						<ul>
 							<li type="circle">Take a walk from the ceremony to <a href="https://www.google.com.au/maps/place/Mrs+Macquarie's+Chair/@-33.85937,151.22225,15z/data=!4m2!3m1!1s0x0:0x43bfb6b9da05a763" class="textlink" target="_blank">Mrs Macquarie’s Chair</a>. The view is stunning.</li>
 							<li type="circle">Enjoy afternoon drinks at <a href="http://operabar.com.au/" class="textlink" target="_blank">Opera Bar</a>.</li>
 							<li type="circle">Meander through the <a href="http://www.rbgsyd.nsw.gov.au/" class="textlink" target="_blank">Royal Botanic Gardens</a>.  We’ll be there getting some more photos with our <a href="http://www.thesimplethingsstudio.com/scott/" class="textlink" target="_blank">amazing photographer</a>.  Photobomb anyone?</li>
 							<li type="circle">Get your photos at the Sydney Opera House and Harbour Bridge.  They’re not called icons for nothing!</li>
 						</ul>
-						<p>If you want to spend time at The Grounds of Alexandria (start the party early!):</p>
+						<h4 class="bold align-left">If you want to spend time at The Grounds of Alexandria (start the party early!):</h4>
 						<ul>
 							<li type="circle">Grab a drink at the <a href="http://thegrounds.com.au/Spaces/the-potting-shed/" class="textlink" target="_blank">Potting Shed</a>. It’s right behind the Atrium.</li>
 							<li type="circle">Visit Kevin Bacon, Bradley and their friends in the animal farm (for the young and young at heart!)</li>
@@ -124,7 +125,7 @@
 				<h3 class="bold blue align-left border-bottom" id="gifts">GIFTS</h3>
 					<div class="content-entry">
 						<h4 class="bold align-left">WHAT’S THE DEAL?</h4>
-						<p>We’ll spare you the gag-inducing wishing well poems (we love you too much). Your presence is present enough. It’s an absolute privilege for us to be with you on our wedding day. If you do insist, we would appreciate a <a href="http://en.wikipedia.org/wiki/Red_envelope" class="textlink" target="_blank">hong bao/red envelope</a> instead of a gift.</p>
+						<p>We’ll spare you the gag-inducing wishing well poems (we love you too much). Your presence is the best present. It’s an absolute privilege for us to be with you on our wedding day. If you insist, we would greatly appreciate a <a href="http://en.wikipedia.org/wiki/Red_envelope" class="textlink" target="_blank">hong bao/red envelope</a> instead of a gift.</p>
 					</div>
 					<div class="spacing2"></div>
 
