--- a/additional.html
+++ b/additional.html
@@ -65,7 +65,7 @@
 					<div class="content-entry">
 						<h4 class="bold align-left spacing6">CEREMONY INFORMATION</h4>
 						<p>The ceremony will be held at the Tarpeian Lawn, located in the Royal Botanic Gardens overlooking the Sydney Opera House and Circular Quay.</p>
-						<p>The ceremony will commence shortly after 3:00PM.</p>
+						<p>The ceremony will commence at 3:00PM.</p>
 						<h4 class="bold align-left spacing6">ADDITIONAL INFORMATION</h4>
 						<p>The Tarpeian Lawn is an outdoor location. There is some shade provided by some large trees, however we recommend being prepared with protection from the sun if this is a concern for you.</p>
 						<p>In case of rain on the day, the ceremony will be postponed and held after 6:00PM during the party at the Grounds of Alexandria. We will contact you on the day if this is the case.</p>
