--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
 		<div class="spacing1">
 			<div class="row">
 				<div class="sixteen columns">
+					<h2 class="bold align-center">FRIDAY 30 OCTOBER 2015</h2>
+				</div>
+			</div>
+		</div>
+		<div class="spacing1">
+			<div class="row">
+				<div class="sixteen columns">
 					<h2 class="bold align-center">CEREMONY</h2>
 				</div>
 				<div class="sixteen columns">
