--- a/traveller.html
+++ b/traveller.html
@@ -70,7 +70,7 @@
 					<h4 class="bold align-left spacing6">HOTELS</h4>
 					<p>To find a hotel, we recommend using the following websites:</p>
 					<p<a href="https://www.lastminute.com.au/" class="textlink" target="_blank">www.lastminute.com.au</p<a></p>
-					<p><a href="https://www.wotif.com/" class="textlink" target="_blank">www.wotif.com</a></p>
+					<p><a href="https://www.booking.com/" class="textlink" target="_blank">www.booking.com</a></p>
 					<h4 class="bold align-left spacing6">APARTMENTS</h4>
 					<p>To find an apartment to rent, we recommend using the following websites:</p>
 					<p><a href="https://www.stayz.com.au/" class="textlink" target="_blank">www.stayz.com.au</a></p>
@@ -105,6 +105,7 @@
 						<li type="circle">Mary's - for tasty burgers (vego included), an eclectic selection of local beers and loud metal music.</li>
 						<li type="circle">Da Mario - pizza, neapolitan style</li>
 						<li type="circle">Movida - tapas like dishes.</li>
+						<li type="circle">Fire Door - meat tastes better when cooked in a wood fired furnace.</li>
 						<li type="circle">Aqua - go for the views but food is also nice, have a lunch special and go explore Luna Park afterwards.</li>
 						<li type="circle">Quay - for when you feel like a splurge among the stunning views of the harbour</li>
 						<li type="circle">Nomad – Housemade halloumi anyone?</li>
@@ -157,9 +158,11 @@
 
 					</ul>
 					<h4 class="bold align-left spacing6">TARONGA ZOO</h4>
-					<p></p>
+					<p>A beautiful harbour side park inhabited by cool animals.</p>
 					<h4 class="bold align-left spacing6">ROYAL BOTANICAL GARDENS AND SYDNEY HARBOUR</h4>
-					<p></p>
+					<p>Quiet harbourside lawns within walking distance of the CBD.</p>
+					<h4 class="bold align-left spacing6">THE ROCKS</h4>
+					<p>Colonial era buildings with great hotels and pubs.</p>
 				</div>
 				<div class="spacing2"></div>
 
