--- a/additional.html
+++ b/additional.html
@@ -82,7 +82,7 @@
 						<h4 class="bold align-left">WEDDING PARTY VENUE</h4>
 						<p>The party to celebrate our wedding will be held following the wedding ceremony at The Grounds of Alexandria in the Atrium.</p>
 						<p>The party will  start at 6:00PM and the venue will remain open until 12:00PM.</p>
-						<p>As the ceremony is only expected to last until 4:00PM, there will be a couple hours to spare for relaxation and to slowly make your way over. Please see our suggestions for what you can do during this time below.</p>	
+						<p>As the ceremony is only expected to last until 4:00PM, there will be a couple hours to spare for relaxation and to slowly make your way over. Please see <a href="#between">our suggestions</a> for what you can do during this time below.</p>	
 						<h4 class="bold align-left">ADDITIONAL INFORMATION</h4>
 						<p>There is parking available at the Grounds of Alexandria, either by entering on Huntley Street or Bourke Road. If you wish to travel by Taxi, the fare from the Tarpeian Lawn should cost between $30-$40.</p>
 						<p>Taxis will be available to return you to your accommodation at your request.</p>
