--- a/additional.html
+++ b/additional.html
@@ -82,7 +82,7 @@
 						<h4 class="bold align-left">WEDDING PARTY VENUE</h4>
 						<p>The party to celebrate our wedding will be held following the wedding ceremony at The Grounds of Alexandria in the Atrium.</p>
 						<p>The party will  start at 6:00PM and the venue will remain open until 12:00PM.</p>
-						<p>As the ceremony is only expected to last until 4:00PM, there will be a couple hours to spare for relaxation and to slowly make your way over. Please see <a href="#between">our suggestions</a> for what you can do during this time below.</p>	
+						<p>As the ceremony is only expected to last until 4:00PM, there will be a couple hours to spare for relaxation and to slowly make your way over. Please see <a href="#between" class="textlink">our suggestions</a> for what you can do during this time below.</p>	
 						<h4 class="bold align-left">ADDITIONAL INFORMATION</h4>
 						<p>There is parking available at the Grounds of Alexandria, either by entering on Huntley Street or Bourke Road. If you wish to travel by Taxi, the fare from the Tarpeian Lawn should cost between $30-$40.</p>
 						<p>Taxis will be available to return you to your accommodation at your request.</p>
@@ -125,7 +125,8 @@
 				<h3 class="bold blue align-left border-bottom" id="gifts">GIFTS</h3>
 					<div class="content-entry">
 						<h4 class="bold align-left">WHAT’S THE DEAL?</h4>
-						<p>We’ll spare you the gag-inducing wishing well poems (we love you too much). Your presence is the best present. It’s an absolute privilege for us to be with you on our wedding day. If you insist, we would greatly appreciate a <a href="http://en.wikipedia.org/wiki/Red_envelope" class="textlink" target="_blank">hong bao/red envelope</a> instead of a gift.</p>
+						<p>We’ll spare you the gag-inducing wishing well poems (we love you too much). Your presence is the best present. It’s an absolute privilege for us to be with you on our wedding day. We would greatly appreciate a <a href="http://en.wikipedia.org/wiki/Red_envelope" class="textlink" target="_blank">hong bao/red envelope</a> instead of a gift.</p>
+						<p>There is no gift registry.</p>
 					</div>
 					<div class="spacing2"></div>
 
