--- a/additional.html
+++ b/additional.html
@@ -80,7 +80,8 @@
 				<h3 class="bold blue align-left border-bottom" id="grounds">THE GROUNDS OF ALEXANDRIA</h3>
 					<div class="content-entry">
 						<h4 class="bold align-left">WEDDING PARTY VENUE</h4>
-						<p>The party to celebrate our wedding will be held following the wedding ceremony at The Grounds of Alexandria in the Atrium.</p>
+						<p>The party to celebrate our wedding will be held following the wedding ceremony at <a href="http://thegrounds.com.au/" class="textlink">The Grounds of Alexandria</a> in the Atrium.</p>
+
 						<p>The party will  start at 6:00PM and the venue will remain open until 12:00PM.</p>
 						<p>As the ceremony is only expected to last until 4:00PM, there will be a couple hours to spare for relaxation and to slowly make your way over. Please see <a href="#between" class="textlink">our suggestions</a> for what you can do during this time below.</p>	
 						<h4 class="bold align-left">ADDITIONAL INFORMATION</h4>
@@ -106,7 +107,7 @@
 						<h4 class="bold align-left">If you want to spend time at The Grounds of Alexandria (start the party early!):</h4>
 						<ul>
 							<li type="circle">Grab a drink at the <a href="http://thegrounds.com.au/Spaces/the-potting-shed/" class="textlink" target="_blank">Potting Shed</a>. It’s right behind the Atrium.</li>
-							<li type="circle">Visit Kevin Bacon, Bradley and their friends in the animal farm (for the young and young at heart!)</li>
+							<li type="circle">Visit Kevin Bacon, Bradley, Margoat Robbie, Goldy Horn and their friends in the animal farm (for the young and young at heart!)</li>
 							<li type="circle">Lounge around the garden.  Sydney’s urban sanctuary.</li>
 							<li type="circle">Spot us when we do the next round of wedding photos.</li>
 						</ul>
