Updated with RSVP page

--- a/rsvp.html
+++ b/rsvp.html
@@ -48,48 +48,15 @@
 			</div>
 		</div>
 		<div class="row navigation-top border-bottom">
-			<div class="four columns"><h4 class="bold"><a href="index.html" class="blue header2">THE WEDDING DAY</a></h4></div>
+			<div class="four columns"><h4 class="bold"><a href="index.html" class="pink header2">THE WEDDING DAY</a></h4></div>
 			<div class="four columns"><h4 class="bold"><a href="additional.html" class="pink header2">ADDITIONAL INFORMATION</a></h4></div>
 			<div class="four columns"><h4 class="bold"><a href="traveller.html" class="pink header2">TRAVELLER INFORMATION</a></h4></div>
-			<div class="four columns"><h4 class="bold"><a href="traveller.html" class="pink header2">RSVP</a></h4></div>
-		</div>
-		<!--<div class="spacing2">
-			<div class="row">
-				<div class="sixteen columns">
-					<h2 class="bold pink align-center">THE WEDDING DAY</h2>
-				</div>
-			</div>
-		</div>-->
-		<div class="spacing1">
-			<div class="row">
-				<div class="sixteen columns">
-					<h2 class="bold align-center">FRIDAY 30 OCTOBER 2015</h2>
-				</div>
-			</div>
+			<div class="four columns"><h4 class="bold"><a href="traveller.html" class="blue header2">RSVP</a></h4></div>
 		</div>
 		<div class="spacing1">
 			<div class="row">
 				<div class="sixteen columns">
-					<h2 class="bold align-center">CEREMONY</h2>
-				</div>
-				<div class="sixteen columns">
-					<h2 class="bold align-center">3:00PM</h2>
-				</div>				
-				<div class="sixteen columns">
-					<h2 class="bold blue align-center"><a href="additional.html#tarpeian" class="blue header3">THE TARPEIAN LAWN</a></h2>
-				</div>
-			</div>
-		</div>
-		<div class="spacing2">
-			<div class="row">
-				<div class="sixteen columns">
-					<h2 class="bold align-center">PARTY</h2>
-				</div>
-				<div class="sixteen columns">
-					<h2 class="bold align-center">6:00PM</h2>
-				</div>				
-				<div class="sixteen columns">
-					<h2 class="bold blue align-center"><a href="additional.html#grounds" class="blue header3">THE GROUNDS OF ALEXANDRIA</a></h2>
+					<h2 class="bold align-center"><a href="https://docs.google.com/forms/d/1REcYcUKTTARqvDhEE-BMcJ6RTn_u1lnS7LXVE4ObI0c/viewform?usp=send_form" class="blue header 2">PLEASE CLICK HERE TO RSVP</a></h2>
 				</div>
 			</div>
 		</div>
