--- a/rsvp.html
+++ b/rsvp.html
@@ -51,7 +51,7 @@
 			<div class="four columns"><h4 class="bold"><a href="index.html" class="pink header2">THE WEDDING DAY</a></h4></div>
 			<div class="four columns"><h4 class="bold"><a href="additional.html" class="pink header2">ADDITIONAL INFORMATION</a></h4></div>
 			<div class="four columns"><h4 class="bold"><a href="traveller.html" class="pink header2">TRAVELLER INFORMATION</a></h4></div>
-			<div class="four columns"><h4 class="bold"><a href="traveller.html" class="blue header2">RSVP</a></h4></div>
+			<div class="four columns"><h4 class="bold"><a href="rsvp.html" class="blue header2">RSVP</a></h4></div>
 		</div>
 		<div class="spacing1">
 			<div class="row">
